# rust-python-functional-dark

./: .vscodeignore  .vsixmanifest  license.md  package.json  palette.md  quickbuild.zsh  readme.md  rust-python-functional-dark-0.1.0.vsix  rust-python-functional-dark-0.1.11.vsix  rust-python-functional-dark-0.1.5.vsix  rust-python-functional-dark-0.1.8.vsix  rust-python-functional-dark-0.1.9.vsix  rust-python-functional-dark-v6.vsix  snap_specification narrative.md  snap_specification.md
python/infoknot/: .gitignore  data.py  pyproject.toml  readme.md  result.py
python/infoknot/tests/: test_emit.py
rust/: readme.md  snap_specification.md
rust/snap/: Cargo.toml
rust/snap/src/: lib.rs
rust/snap/src/codec/: base64.rs  hex.rs  mod.rs  weight_text.rs  weight_text_emit.rs  weight_text_errors.rs  weight_text_parse.rs
rust/snap/src/data/: edges.rs  edges_tests.rs  err.rs  graph.rs  graph_cycles.rs  literals.rs  meta.rs  mod.rs  nodes.rs  registers.rs  streams.rs  type_registry.rs  types.rs  weight.rs
rust/snap/src/io/: daggy.rs  mod.rs  petgraph.rs
rust/snap/src/io/dot/: emit.rs  emit_body.rs  mod.rs  parse.rs  parse_body.rs
rust/snap/src/io/json/: emit.rs  mod.rs  parse.rs  parse_body.rs
rust/snap/src/io/snap/: emit.rs  emit_body.rs  lex.rs  lex_errs.rs  mod.rs  parse.rs  parse_body.rs  parse_weight.rs
rust/snap/src/io/xml/: emit.rs  emit_body.rs  mod.rs  parse.rs  parse_attr.rs  parse_body.rs
rust/snap/tests/: canary_roundtrip.rs  v0_7_node_weight_roundtrip.rs
samples/: example.snap
syntaxes/: markdown-table-injection.tmLanguage.json  (+2 more)
(+8 files in other folders)
